# OS_project

./: CMakeLists.txt
inc/: Screen.h  Screen_graphs_maker.h  Screen_inits.h  Screen_listeners.h  Screen_manipulations.h  Screen_preparations.h  cpu_screen.h  database_manipulation.h  explore_screen.h  info_screen.h  proc_analysis.h  processes_screen.h  tests.h  utils.h  welcome_screen.h
src/: database_manipulation.cpp  main.cpp  proc_analysis.cpp  tests.cpp  utils.cpp
